--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,8 @@
 {
-    "liveServer.settings.port": 5501
+    "liveServer.settings.port": 5502,
+    "workbench.colorCustomizations": {
+        "activityBar.background": "#46241D",
+        "titleBar.activeBackground": "#623228",
+        "titleBar.activeForeground": "#FCF9F9"
+    }
 }
